--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@testing-library/user-event": "^12.8.3",
     "apollo-server": "^3.5.0",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^4.4.1",
     "concurrently": "^6.4.0",
     "express": "^4.17.1",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "1.0.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
