--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "apollo-server": "^3.5.0",
+    "apollo-server-express": "^2.15.0",
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.4.1",
     "concurrently": "^6.4.0",
