--- a/package.json
+++ b/package.json
@@ -1,54 +1,22 @@
 {
-  "name": "book-search",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://ldw5.github.io/book-search",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "apollo-server-express": "^2.15.0",
-    "bcrypt": "^5.0.1",
-    "bootstrap": "^4.4.1",
-    "concurrently": "^6.4.0",
-    "express": "^4.17.1",
-    "graphql": "^16.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^2.2.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "1.0.1",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
-  },
+  "name": "googlebooks-app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server/server.js",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "build": "cd client && npm run build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.5.5",
+    "graphql": "^16.0.1"
   }
 }
